2018-08-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-get-original-header): Make the return value
	compatible with the M$ O*tlook style.

2018-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-default-methods-alist): Add a new method
	`top-posting'.  See the doc-string of `mu-cite-get-original-header'
	for the usage.
	(mu-cite-get-original-header): New function.

2014-06-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-register.el (mu-cite-get-no-prefix-register-verbose-method):
	New function.
	(mu-cite-get-prefix-register-verbose-method): Work for it.

	* mu-cite.el (mu-cite-default-methods-alist):
	Add a new method `no-prefix-register-verbose'.
	(mu-cite-original): Register a name before generating top cite form.
	(fill-column-for-fill-cited-region): Don't use default-fill-column.
	(string-compare-from-top): Replace sref with aref.

2012-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-remove-text-properties): Fix mismatched paren in
	XEmacs part.

2010-06-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* MU-CFG: Don't load poe twice; add emu subdirectory to load-path
	when LISPDIR is specified.

2009-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* README.en (Bug reports): Remove.

2007-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-remove-text-properties)
	(fill-column-for-fill-cited-region): Don't use old-style backquotes.

2007-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-char-category): Rename from char-category of
	which the name is too generic.

2006-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* README.en (What's MU): Update required version of APEL to 10.7
	or later.

	* MU-CFG (PACKAGEDIR): Use install-get-default-package-directory.

2006-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* MU-CFG (PACKAGEDIR): Avoid an error with Emacs.

2006-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* MU-MK (compile-mu-package): Use batch-update-directory-autoloads