@@ -1,3 +1,7 @@
+2019-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mu-cite.el (mu-cite-get-original-header): Use original timezone.
+
 2018-08-23  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mu-cite.el (mu-cite-get-original-header): Make the return value
